@@ -139,8 +139,12 @@ sub do_extract {
         my $patch = "$dscdir$difffile";
 	info(_g("applying %s"), $difffile);
 	my $patch_obj = Dpkg::Source::Patch->new(filename => $patch);
-	$patch_obj->apply($newdirectory, force_timestamp => 1,
-                          timestamp => time());
+	my $analysis = $patch_obj->apply($newdirectory, force_timestamp => 1,
+                                         timestamp => time());
+	my @files = grep { ! m{^[^/]+/debian/} }
+		    sort keys %{$analysis->{'filepatched'}};
+	info(_g("upstream files that have been modified: %s"),
+	     "\n " . join("\n ", @files)) if scalar @files;
     }
 }
 
