@@ -81,6 +81,8 @@ dpkg (1.15.5) UNRELEASED; urgency=low
   * Modify dpkg-source -b to use default build options from
     debian/source/options. Thus it's now possible to have sticky options, for
     example for the choice of a compression method (-Z<comp>).
+  * dpkg-source -x outputs the list of upstream files modified by the diff.gz
+    (applies only to source packages using format 1.0). Closes: #482166
 
   [ Updated dpkg translations ]
   * Czech (Miroslav Kure).
